improove registaration page and initliase test data